--- a/src/cmps/Player/Player.scss
+++ b/src/cmps/Player/Player.scss
@@ -6,6 +6,7 @@
   align-items: center;
   height: 100%;
   position: relative;
+  background-color: #fff;
   .title {
     text-align: center;
     font-weight: 600;
@@ -46,5 +47,10 @@
     position: absolute;
     z-index: 1;
     padding: 20px;
+  }
+  .soundcloud-player {
+    z-index: -2;
+    position: absolute;
+    top: 50px;
   }
 }
